   10. Duergar get -10% XP, Dwarfs get Stonecunning, Elfs Keenvision
   11. Races can now have a XP adjustment, see Archon's Guide
   12. New Language: WormSpeak
   13. New Chants: BurrowSpeak
   14. Gnomes get BurrowSpeak and Burrow Hide, Goblins +5% XP, Half Elfs Cultural Adaptation
   15. Racial cultural abilities now support level and auto-gain/qualify.
# Build 5.9.4 Released 08/03/2016
   1. Qualify now shows language limits
   2. New Prop_NoTeleport exceptions
   3. ALIAS commands now supports "noecho" prefix to prevent echos.
   4. New property: Prop_HereEnabler, like the other Prop_Here* and Prop_*Enabler props.
   5. New Archon ability: Matrix Possess
   6. Common Skills now support INFO argument to get info on recipe items.
   7. New Area type: SubThinInstance, for making thin instance clones of existing areas.
   8. EQUIP LONG now shows all items being worn and tattoos, even at other layers.
   9. CoffeeMud now supports Twitter.  See the end of the Installation Guide.
  10. Prop_StatTrainer has new parameter: BASEVALUE, for making it more flexible.
  11. Prop_StatAdjuster has new parameter: ADJMAX, for giving mobs more POWAH!
  12. New Spell: Spell_Planeshift, for going to other planes of existence
  13. Prop_AbsorbDamage has several new parameters, and can now effect rooms/areas
  14. Clerics and Druids also get planar travelling spells: Plane Walking and Planar Travel
  15. New racial ability for horse-like races: Buck
  16. Achievements command has lots of new options
  17. The Skills Report on the Statistics MUDGrinder page can now group by name, type, domain.
  18. New Achievement trigger, FACTIONS (with an S), for counting groups of factions.
  19. Several new REMORTRETAIN options for expanding or fine tuning the remort process.
  20. New Dragonbreath parameters and types
  21. Races and Clan Governments now support parameters for granted abilities.
  22. New internal mob saving throws (more damage mitigators/enhancers), including weapon types.