@@ -518,6 +518,13 @@ Usage    : CAST DARKNESS \n\r\
 Example  : cast darkness\n\r\
 Causes a pitch-black darkness to fill the room.
 
+SPELL_DARKNESSGLOBE=<ABILITY>\
+Usage    : CAST "DARKNESS GLOBE" \n\r\
+Example  : cast "darkness globe"\n\r\
+Causes an enormous globe of darkness to follow the caster around, enveloping \
+everyone in the room, and making the room as dark as a moonless night whereever \
+the caster is.
+
 SPELL_DAYDREAM=<ABILITY>\
 Usage    : CAST "DAYDREAM" [DREAM TO GIVE TO IDLE/AWAKE]\n\r\
 Example  : cast "daydream" about flowers and blood.\n\r\
